# judgement-bot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  __init__.py  example-config.yml  ingest.py  package-lock.json  parse_rulebook.py  pyproject.toml  requirements.txt  test-kibana-api.js  vercel.json
connector/: README.md  USAGE.md  index-mapping.json
connector/crawlee/: client.py
ingestion/: Makefile  README.md  mappings.json
ingestion/connector/: .dockerignore  Dockerfile  Dockerfile.base  README.md  clean_connectors.sh  config.yml  docker-compose.yml  index-mapping.json  run_connector.sh
output/: _summary.json  chunk_0001.json  chunk_0002.json  chunk_0003.json  chunk_0004.json  chunk_0005.json  chunk_0006.json  chunk_0007.json  chunk_0008.json  chunk_0009.json  chunk_0010.json  chunk_0011.json  chunk_0012.json  chunk_0013.json  chunk_0014.json  chunk_0015.json  chunk_0016.json  chunk_0017.json  chunk_0018.json  chunk_0019.json  chunk_0020.json  chunk_0021.json  chunk_0022.json  chunk_0023.json  chunk_0024.json  chunk_0025.json  chunk_0026.json  chunk_0027.json  chunk_0028.json  chunk_0029.json  chunk_0030.json  chunk_0031.json  chunk_0032.json  chunk_0033.json  chunk_0034.json  chunk_0035.json  chunk_0036.json  chunk_0037.json  chunk_0038.json  chunk_0039.json  (+226 more)
webapp/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/components/: ChatInput.tsx  ChatMessage.tsx  ConversationList.tsx
webapp/lib/: kibana-client.ts  session.ts  types.ts
(+11 files in other folders)
